--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<module>test-ui</module>
 		<module>test-model</module>
 		<module>test-service</module>
+		<module>test-config</module>
 	</modules>
 
 	<dependencies>
@@ -35,6 +36,19 @@
 			<artifactId>javax.inject</artifactId>
 			<version>${javax.inject.version}</version>
 		</dependency>
+		
+		 <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.tomcat</groupId>
+                    <artifactId>tomcat-jdbc</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        
+        
 
 	</dependencies>
 
