--- a/test-main/pom.xml
+++ b/test-main/pom.xml
@@ -23,6 +23,35 @@
 			<artifactId>test-api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+	
+		<dependency>
+			<groupId>com.test</groupId>
+			<artifactId>test-config</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.tomcat</groupId>
+                    <artifactId>tomcat-jdbc</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        
+        <!-- HikariCP connection pool -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+        </dependency>
+        
 
 		<!-- Spring Framework -->
 		<dependency>
