--- a/test-model/pom.xml
+++ b/test-model/pom.xml
@@ -10,4 +10,20 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	
+	<dependencies>
+	
+		 <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.tomcat</groupId>
+                    <artifactId>tomcat-jdbc</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        
+	
+	</dependencies>
+	
 </project>
