--- a/test-service/pom.xml
+++ b/test-service/pom.xml
@@ -1,13 +1,28 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-  	<artifactId>test-service</artifactId>
-	<name>Test Full Stack Service</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.test</groupId>
+    <artifactId>test</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
+  <artifactId>test-service</artifactId>
+  <name>Test Full Stack Service</name>
+  
+  	<dependencies>
 	
-	<parent>
-		<groupId>com.test</groupId>
-		<artifactId>test</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
+		<dependency>
+			<groupId>com.test</groupId>
+			<artifactId>test-model</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		<!-- Spring Framework -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		
+	</dependencies>
+	
 	
 </project>
